[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "playlist-auto-dj"
version = "0.1.0"
description = "Playlist Auto-DJ: Mood-Aware Music Recommender with Spotify + Streamlit"
readme = "README.md"
requires-python = ">=3.9"
authors = [{name="Your Name"}]
license = {text="MIT"}
dependencies = [
  "pandas>=2.1",
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "joblib>=1.3",
  "pyarrow>=14.0",
  "spotipy>=2.23",
  "streamlit>=1.32",
  "matplotlib>=3.8"
]

[project.optional-dependencies]
dev = ["pytest","ruff","mypy","pytest-cov"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
addopts = "-q"
